# dog

./: Cargo.toml  README.md  justfile
.github/workflows/: clippy.yml  docs.yml  format.yml
crates/dog/: Cargo.toml
crates/dog/examples/: camera_sim.rs  viewer_ex.rs
crates/dog/src/: lib.rs
crates/dog/src/examples/: viewer_example.rs
crates/dog_tv/: Cargo.toml
crates/dog_tv/examples/: camera_sim.rs  viewer_ex.rs
crates/dog_tv/src/: lib.rs
crates/dog_tv/src/examples/: viewer_example.rs
crates/dog_tv_renderer/: Cargo.toml
crates/dog_tv_renderer/src/: camera.rs  lib.rs  offscreen_renderer.rs  pipeline_builder.rs  pixel_renderer.rs  render_context.rs  renderables.rs  scene_renderer.rs  textures.rs  types.rs  uniform_buffers.rs
crates/dog_tv_renderer/src/camera/: properties.rs
crates/dog_tv_renderer/src/pixel_renderer/: pixel_line.rs  pixel_point.rs
crates/dog_tv_renderer/src/renderables/: frame.rs  pixel_renderable.rs  plot.rs  renderable2d.rs  renderable3d.rs  scene_renderable.rs
crates/dog_tv_renderer/src/renderables/plot/: curve_vec_with_conf.rs  scalar_curve.rs  vec_conf_curve.rs  vec_curve.rs
crates/dog_tv_renderer/src/renderables/scene_renderable/: axes.rs
crates/dog_tv_renderer/src/scene_renderer/: distortion.rs  line.rs  mesh.rs  point.rs  textured_mesh.rs
crates/dog_tv_renderer/src/shaders/: distortion.wgsl
crates/dog_tv_renderer/src/textures/: depth.rs  depth_image.rs  main_render_z_buffer.rs  ndc_z_buffer.rs  rgba.rs  visual_depth.rs
crates/dog_tv_sim/: Cargo.toml
crates/dog_tv_sim/src/: camera_simulator.rs  lib.rs
crates/dog_tv_viewer/: Cargo.toml
crates/dog_tv_viewer/src/: interactions.rs  lib.rs  packets.rs  simple_viewer.rs  viewer_base.rs  views.rs
crates/dog_tv_viewer/src/interactions/: inplane_interaction.rs  orbit_interaction.rs
crates/dog_tv_viewer/src/packets/: image_view_packet.rs  scene_view_packet.rs
crates/dog_tv_viewer/src/packets/plot_view_packet/: curve_vec_with_conf.rs  scalar_curve.rs  vec_curve.rs
crates/dog_tv_viewer/src/views/: active_view_info.rs  image_view.rs  plot_view.rs  scene_view.rs  scene_view.rs.orig  view2d.rs  view3d.rs
crates/dog_viewer/: Cargo.toml
crates/dog_viewer/src/: camera_simulator.rs  lib.rs  renderables.rs  renderer.rs
crates/dog_viewer/src/renderables/: frame.rs  renderable2d.rs  renderable3d.rs
crates/dog_viewer/src/renderer/: camera.rs  scene_renderer.rs  textures.rs  types.rs  uniform_buffers.rs
crates/dog_viewer/src/renderer/camera/: clipping_planes.rs  intrinsics.rs  properties.rs
crates/dog_viewer/src/renderer/scene_renderer/: distortion.rs  line.rs  mesh.rs  point.rs  textured_mesh.rs
crates/dog_viewer/src/renderer/textures/: depth.rs  depth_image.rs  visual_depth.rs
crates/dog_viewer/src/viewer/: aspect_ratio.rs  interactions.rs  viewer_base.rs
crates/dog_viewer/src/viewer/interactions/: inplane_interaction.rs  orbit_interaction.rs
