[workspace]
members = [
  "crates/dog",
  "crates/dog_viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
include = [
  "**/*.rs",
  "**/*.wgsl",
  "**/*.md",
  "**/Cargo.toml",
]
keywords = ["visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sophus-vision/sophus-rs/"
version = "0.1.0"

[workspace.dependencies]
dog = {path = "crates/dog", version = "0.1.0"}
dog_viewer = {path = "crates/dog_viewer", version = "0.1.0"}

approx = "0.5"
assertables = "8.3"
bytemuck = {version = "1.14", features = ["derive"]}
eframe = {version = "0.28.1", features = ["wgpu"]}
egui-wgpu = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11"
faer = "0.19"
linked-hash-map = "0.5"
log = "0.4"
num-traits = "0.2"
sophus = "0.9.0"
wgpu = "0.20.1"

[profile.release]
debug = 1
