[workspace]
members = [
  "crates/dog_tv",
  "crates/dog_tv_renderer",
  "crates/dog_tv_sim",
  "crates/dog_tv_viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
include = [
  "**/*.rs",
  "**/*.wgsl",
  "**/*.md",
  "**/Cargo.toml",
]
keywords = ["visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dog-tv/dog/"
version = "0.1.0"

[workspace.dependencies]
dog_tv = {path = "crates/dog_tv", version = "0.1.0"}
dog_tv_renderer = {path = "crates/dog_tv_renderer", version = "0.1.0"}
dog_tv_sim = {path = "crates/dog_tv_sim", version = "0.1.0"}
dog_tv_viewer = {path = "crates/dog_tv_viewer", version = "0.1.0"}

approx = "0.5"
assertables = "8.3"
bytemuck = {version = "1.14", features = ["derive"]}
eframe = {version = "0.28.1", features = ["wgpu"]}
egui-wgpu = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11"
linked-hash-map = "0.5"
log = "0.4"
num-traits = "0.2"
sophus = {git = "https://github.com/sophus-vision/sophus-rs.git", rev = "f01c712d510bb2d4134d2ebbd11ad153c15997a5"}
wgpu = "0.20.1"

[profile.release]
debug = 1
