[workspace]
members = [
  "crates/dog_tv",
  "crates/dog_tv_renderer",
  "crates/dog_tv_sim",
  "crates/dog_tv_viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
include = ["**/*.rs", "**/*.wgsl", "**/*.md", "**/Cargo.toml"]
keywords = ["visualization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dog-tv/dog/"
version = "0.1.0"

[workspace.dependencies]
dog_tv = { path = "crates/dog_tv", version = "0.1.0" }
dog_tv_renderer = { path = "crates/dog_tv_renderer", version = "0.1.0" }
dog_tv_sim = { path = "crates/dog_tv_sim", version = "0.1.0" }
dog_tv_viewer = { path = "crates/dog_tv_viewer", version = "0.1.0" }

approx = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }
eframe = { version = "0.28.1", features = ["wgpu"] }
egui-wgpu = "0.28.1"
egui_plot = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11"
linked-hash-map = "0.5"
log = "0.4"
num-traits = "0.2"
sophus = { git = "https://github.com/sophus-vision/sophus-rs.git", rev = "a8b6305166c5bfb13b974b114a5f4f80d2c337f0" }
thingbuf = "0.1.6"
wgpu = "0.20.1"

[profile.release]
debug = 1
