[package]
description = "dog-tv renderer"
name = "dog_tv_renderer"
readme = "../../README.md"

edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
approx.workspace = true
bytemuck.workspace = true
eframe.workspace = true
egui_extras.workspace = true
env_logger.workspace = true
linked-hash-map.workspace = true
num-traits.workspace = true
sophus.workspace = true
wgpu.workspace = true

[features]
std = ["sophus/std"]
